install/resources/console-api.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: console-api
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: console-api
  template:
    metadata:
      labels:
        app: console-api
    spec:
      serviceAccountName: console-api-server
      volumes:
      - emptyDir: {}
        name: cache
      containers:
      - name: console-api
        image: quay.io/eyefloaters/console-api:0.0.24
        ports:
        - containerPort: 8080
      - name: console-ui
        image: quay.io/eyefloaters/ui:0.0.24
        volumeMounts:
        - mountPath: /app/.next/cache
          name: cache
        ports:
        - containerPort: 3000
