install/resources/keycloak-postgres.statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak-postgres
spec:
  serviceName: keycloak-postgres-db-service
  selector:
    matchLabels:
      app: keycloak-postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: keycloak-postgres
    spec:
      volumes:
        - name: keycloak-postgres-data
          persistentVolumeClaim:
            claimName: keycloak-postgres-data
      containers:
        - name: postgres
          image: quay.io/sclorg/postgresql-15-c9s
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ ALL ]
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: keycloak-postgres-data
              mountPath: /var/lib/pgsql
