install/resources/console-api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: console-api
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: console-api
