install/resources/console-ui.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: console-ui
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: console-api
