install/resources/keycloak-postgres.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-postgres
spec:
  selector:
    app: keycloak-postgres
  type: ClusterIP
  internalTrafficPolicy: Cluster
  ports:
  - port: 5432
    targetPort: 5432
