install/resources/console-prometheus.ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: console-prometheus-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    route.openshift.io/termination: edge
spec:
  defaultBackend:
    service:
      name: prometheus-operated
      port:
        number: 9090
  rules:
    - host: console-prometheus.${CLUSTER_DOMAIN}
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: prometheus-operated
                port:
                  number: 9090
